# puzzle_game

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: code-check.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: database.py  models.py  settings.py
backend/app/routers/: puzzles.py
backend/tests/: conftest.py  test_puzzles.py
frontend/: package.json
frontend/src/components/buttons/: SubmitButton.vue
frontend/src/layouts/default/: Default.vue
frontend/src/plugins/: axios.js  index.js
frontend/src/router/: index.js
frontend/src/store/: app.js
frontend/src/views/: Game.vue  GameScreen.vue  Home.vue  Login.vue  PuzzleDialog.vue
