[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Arthur Filimonov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
aiosqlite = "^0.19.0"
black = "^23.7.0"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
bandit = "^1.7.5"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
